update(pom): add maven-failsafe-plugin for tests